src/objects/BMCServiceDesk__BMC_DiskPartition__c.object
<CustomObject>
    <description>BMC_DiskPartition. CMDB Class that stores information about disk partitions. A disk partition is a contiguous range of logical blocks (groups of records) that the operating system can identify by the partition&apos;s type and subtype fields. This class corresponds to the DMTF CIM_DiskPartition class.</description>
    <fields>
        <fullName>BMCServiceDesk__Block_Size__c</fullName>
        <label>Block Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Bootable__c</fullName>
        <label>Bootable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Number_of_Blocks__c</fullName>
        <label>Number of Blocks</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Primary_Partition__c</fullName>
        <label>Primary Partition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Disk Partition</label>
    <nameField>
        <label>Disk Partition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disk Partitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>